# jsonprotobufbenchmark

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  analysis.cpp  benchmark.cpp  build.rs  output.txt  person.proto  person_evolved.proto  test.js
proto/: person.proto  person_evolved.proto
src/: benchmark.rs  main.rs  test_data.rs
