[package]
name = "protobuf-json-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.11"
prost-types = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
flate2 = "1.0"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
criterion = "0.4"
tokio = { version = "1.0", features = ["full"] }
num_cpus = "1.0"
colored = "2.0"
prettytable-rs = "0.10"

[build-dependencies]
prost-build = "0.11"